# pauvsi_m7

./: CMakeLists.txt  README.md  install-dependencies.sh  package.xml  setLoggerLevel.sh
color_tracker/: CMakeLists.txt  package.xml
color_tracker/include/color_tracker/: tracker.h
include/pauvsi_vo/: Frame.h  vo.cpp  vo.h
launch/: cameraCalibrator.launch  cameras.launch  flightController.launch  gridLocalizer.launch  optical_flow.launch  urdfPublisher.launch  vo.launch
params/: 13Y3C_params.yaml  PtamFixParams-13Y3C.yaml  gridBasedLocalizerParams.yaml  gridLocalizerParams.yaml
params/cameras/: 13S2C_params.yaml
pauvsi_m7/: CMakeLists.txt  README.md  install-dependencies.sh  package.xml
pauvsi_m7/include/: gridLoc.cpp  gridLoc.h
pauvsi_m7/include/pauvsi_vo/: vo.cpp
pauvsi_m7/launch/: cameraCalibrator.launch  flightController.launch  gridLocalizer.launch  optical_flow.launch
pauvsi_m7/params/: 13S2C_params.yaml  13Y3C_params.yaml  gridLocalizerParams.yaml  voParams.yaml
pauvsi_m7/src/ComputerVision/: gridBasedLocalizer.cpp  pauvsi_vo.cpp
pauvsi_m7/src/Utilities/: cameraCalibrator.cpp
pauvsi_m7/urdf/: pauvsi_m7_robot.urdf
pauvsi_tracking/: CMakeLists.txt  package.xml
pauvsi_tracking/include/pauvsi_tracking/: controller.cpp  controller.hpp  kalman_filter.cpp  kalman_filter.hpp  rplidar.cpp  rplidar.hpp  tracker.cpp  tracker.h  tracker.hpp  tracking.hpp
pauvsi_tracking/launch/: lidar.launch  tracker.launch
pauvsi_tracking/src/: obstacle_tracking.cpp  pauvsi_tracking.cpp
rviz/: fullVisualization.rviz
src/ComputerVision/: cameraCalibrator.cpp  gridBasedLocalizer.cpp  pauvsi_vo.cpp
src/Tracking/: Positioning.cpp  imageCapture.cpp
src/Utilities/: PGCameraDriver.cpp  cameraCalibrator.cpp
udev/: 49-teensy.rules
urdf/: pauvsi_m7_robot.urdf
